Validate Discord widget app
Build and validate the AMOLED Discord widget companion with notification-backed widgets and optional OAuth Social SDK messaging.